--- a/targets/wasm/demo/CMakeLists.txt
+++ b/targets/wasm/demo/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16.3)
 
-add_executable(demo main.c)
+add_executable(demo main.c hello.codon)
 set_target_properties(
     demo
     PROPERTIES 
@@ -10,15 +10,12 @@ set_target_properties(
 
 target_compile_options(demo PRIVATE --sysroot=${WASI_SDK_PREFIX}/share/wasi-sysroot --target=wasm32-wasi)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions -std=c++17")
+set(CMAKE_CXX_FLAGS "-v ${CMAKE_CXX_FLAGS} -fno-exceptions -std=c++17")
 
-message(STATUS ${LLVM_BUILD_DIR}/bin/llc)
 add_custom_target( hello.o ALL
-    COMMAND codon build --release -o ${CMAKE_CURRENT_BINARY_DIR}/hello.ll ${CMAKE_CURRENT_SOURCE_DIR}/hello.codon
-    # COMMAND codon build -o ${CMAKE_CURRENT_BINARY_DIR}/hello.ll ${CMAKE_CURRENT_SOURCE_DIR}/hello.codon
-    COMMAND ${LLVM_BUILD_DIR}/bin/llc -march=wasm32 -filetype=obj ${CMAKE_CURRENT_BINARY_DIR}/hello.ll -o ${CMAKE_CURRENT_BINARY_DIR}/hello.o
+    COMMAND codon build --release --march=wasm32 --obj -o ${CMAKE_CURRENT_BINARY_DIR}/hello.o ${CMAKE_CURRENT_SOURCE_DIR}/hello.codon
     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/hello.codon
-    COMMENT "Generating libhello2.so")
+    COMMENT "Generating hello.wasm")
 
 target_link_libraries(demo PRIVATE codonrt ${CMAKE_CURRENT_BINARY_DIR}/hello.o)
 add_dependencies(demo hello.o)
