--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -477,7 +477,7 @@ ExternalProject_Add(
    runtime-wasi-project
    SOURCE_DIR ${CMAKE_SOURCE_DIR}/targets/wasm
    BINARY_DIR ${CMAKE_BINARY_DIR}/targets/wasm
-   CMAKE_ARGS -DCMAKE_C_COMPILER=${WASI_SDK_PREFIX}/bin/clang -DCMAKE_CXX_COMPILER=${WASI_SDK_PREFIX}/bin/clang++ -DWASI_SDK_PREFIX=${WASI_SDK_PREFIX} -DLLVM_BUILD_DIR=${LLVM_BUILD_DIR} -DCMAKE_TOOLCHAIN_FILE=${WASI_SDK_PREFIX}/share/cmake/wasi-sdk.cmake
+   CMAKE_ARGS -DCMAKE_C_COMPILER=${WASI_SDK_PREFIX}/bin/clang -DCMAKE_CXX_COMPILER=${WASI_SDK_PREFIX}/bin/clang++ -DWASI_SDK_PREFIX=${WASI_SDK_PREFIX} -DCMAKE_TOOLCHAIN_FILE=${WASI_SDK_PREFIX}/share/cmake/wasi-sdk.cmake
    UPDATE_COMMAND ""
    PATCH_COMMAND ""
    TEST_COMMAND ""
